src/math_ops/snapshots/rbx_types_ops__math_ops__cframe__cframe_modulus_cframe.snap
---
source: src/math_ops/cframe.rs
expression: "CFrame::new(Vector3::new(5.0, 10.0, 15.0),\nMatrix3::new(Vector3::new(6.0, 12.0, 18.0), Vector3::new(6.0, 12.0, 18.0),\nVector3::new(6.0, 12.0,\n18.0))).modulus(&CFrame::new(Vector3::new(5.0, 10.0, 15.0),\nMatrix3::new(Vector3::new(6.0, 12.0, 18.0), Vector3::new(6.0, 12.0, 18.0),\nVector3::new(6.0, 12.0, 18.0))).into())"
---
CFrame:
  position:
    - 0
    - 0
    - 0
  orientation:
    - - 0
      - 0
      - 0
    - - 0
      - 0
      - 0
    - - 0
      - 0
      - 0
